objects/BRNSHRK__SlidesharkPresent__c.object
<CustomObject>
    <description>Tracks Slideshark presentation activity</description>
    <fields>
        <fullName>BRNSHRK__BrainsharkPresentation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Slideshark used in this present</description>
        <label>Presentation Title</label>
        <referenceTo>BRNSHRK__BrainsharkPresentation__c</referenceTo>
        <relationshipLabel>Slideshark Presents</relationshipLabel>
        <relationshipName>Slideshark_Presents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__BrainsharkViewKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brainshark View Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Slideshark Presents</relationshipLabel>
        <relationshipName>Slideshark_Presents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Duration__c</fullName>
        <label>Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Slideshark Presents</relationshipLabel>
        <relationshipName>Slideshark_Presents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__NumberOfSlides__c</fullName>
        <label>Number of Slides</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__OpportunityStage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage Presented</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PercentSlidesPresented__c</fullName>
        <formula>IF (BRNSHRK__SlidesPresented__c &lt;= 0,0, IF (BRNSHRK__NumberOfSlides__c &lt;= 0,0, if(BRNSHRK__SlidesPresented__c / BRNSHRK__NumberOfSlides__c &gt; 1, 1, BRNSHRK__SlidesPresented__c / BRNSHRK__NumberOfSlides__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Slides Presented</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Pid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presentation ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresentByActiveUser__c</fullName>
        <formula>IF(Owner:User.IsActive = TRUE, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Present by Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresentByRunningUser__c</fullName>
        <formula>IF(Owner:User.Id = $User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Present by Running User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresentDateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Presented</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresentIPAddressCity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Present IP Address City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresentIPAddressCountry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Present IP Address Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresentIPAddressRegion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Present IP Address Region</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresentIsMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Present Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresentTime__c</fullName>
        <label>Present Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Present_Minutes__c</fullName>
        <formula>FLOOR( BRNSHRK__PresentTime__c / 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Present Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Present_Seconds__c</fullName>
        <formula>BRNSHRK__PresentTime__c  - BRNSHRK__Present_Minutes__c * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Present Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Present_Time_MM_SS__c</fullName>
        <formula>&quot;Minutes:&quot; &amp; Text(BRNSHRK__Present_Minutes__c) &amp; &quot; Seconds:&quot; &amp; Text(BRNSHRK__Present_Seconds__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenting Time MM:SS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresenterName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presenter Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresenterRole__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Slideshark Presents</relationshipLabel>
        <relationshipName>Slideshark_Presents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Slideshark Presents</relationshipLabel>
        <relationshipName>Slideshark_Presents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Slideshark Presents</relationshipLabel>
        <relationshipName>Slideshark_Presents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SfdcCompany__c</fullName>
        <formula>IF(ISBLANK(BRNSHRK__Contact__r.Account.Name), IF(ISBLANK(BRNSHRK__Lead__r.Company), &quot;&quot;, BRNSHRK__Lead__r.Company), BRNSHRK__Contact__r.Account.Name)</formula>
        <inlineHelpText>Formula pulls data from Lead/Contact.</inlineHelpText>
        <label>SFDC: Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SfdcEmail__c</fullName>
        <formula>IF(ISBLANK(BRNSHRK__Contact__r.Email), BRNSHRK__Lead__r.Email, BRNSHRK__Contact__r.Email)</formula>
        <inlineHelpText>Formula pulls data from Lead/Contact.</inlineHelpText>
        <label>SFDC: Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SfdcPhone__c</fullName>
        <formula>IF(BRNSHRK__Contact__c = &quot;&quot;, BRNSHRK__Lead__r.Phone, BRNSHRK__Contact__r.Phone)</formula>
        <inlineHelpText>Formula pulls data from Lead/Contact.</inlineHelpText>
        <label>SFDC: Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SfdcTitle__c</fullName>
        <formula>IF(BRNSHRK__Contact__c = &quot;&quot;, BRNSHRK__Lead__r.Title, BRNSHRK__Contact__r.Title)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls the Job Title field from the Lead/Contact record.</inlineHelpText>
        <label>SFDC: Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SlidesPresented__c</fullName>
        <label>Slides Presented</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Slideshark Present</label>
    <listViews>
        <fullName>BRNSHRK__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Presented</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Slideshark Presents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>